Updates from Overleaf

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,4 +1,15 @@
-@misc{temp,
-  title = {Temporary source},
-  year = {2025}
+@online{WikiARM,
+  title        = {ARM architecture},
+  url          = {https://en.wikipedia.org/wiki/ARM_architecture},
+}
+@manual{Z80000,
+  title        = {Z80000 CPU User Manual},
+  author       = {{Zilog Inc.}},
+  organization = {Zilog},
+  url          = {http://www.bitsavers.org/components/zilog/z80000/Z80000_CPU_Preliminary_Technical_Manual_Sep84.pdf},
+}
+@online{WikiZ80000,
+  title        = {Zilog Z80000},
+  year         = {2024},
+  url          = {https://en.wikipedia.org/wiki/Zilog_Z80000},
 }
