Updates from Overleaf

--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -17,3 +17,8 @@
   year  = {2024},
   url   = {https://en.wikipedia.org/wiki/Zilog_Z80000},
 }
+@manual{ARMv2ISA,
+  title = {ARM2 and ARM3 Programmer's Reference Manual},
+  year  = {1988},
+  url   = {https://archive.org/details/ArmV2/page/n29/mode/2up},
+}
